--- a/boletim.html
+++ b/boletim.html
@@ -16,6 +16,7 @@
             <tr>
                 <th>Disciplina</th>
                 <th>Nota</th>
+                <th>Situação</th> <!-- Nova coluna para exibir a situação -->
             </tr>
         </table>
     </div>
